--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.username=root
 spring.datasource.password=mysql
 spring.jpa.hibernate.ddl-auto=none
 server.port=8082
+#Api Documentation
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
